--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta content="IE=edge" http-equiv="X-UA-Compatible">
-		<meta content="width=device-width,initial-scale=1.0" name="viewport">
+		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 		<link href="<%= BASE_URL %>favicon.ico" rel="icon">
 		<title><%= htmlWebpackPlugin.options.title %></title>
 		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
@@ -13,6 +13,7 @@
 			<strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 		</noscript>
 		<div id="app"></div>
+		<div id="modal"></div>
 		<!-- built files will be auto injected -->
 	</body>
 </html>
